--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 <body>
     <h1>Unsplash API - Infinite Scroll</h1>
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="Loadingg.svg" alt="Loading">
     </div>
     <!-- Image Container -->
     <div class="image-container" id="image-container">
-        <img src="https://images.unsplash.com/photo-1606046752912-a3596ada9fd3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1606046752912-a3596ada9fd3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1606046752912-a3596ada9fd3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=80" alt="">
     </div>
     <!-- Script (comments are done by ctrl+k+c)-->
     <script src="script.js"></script>
